[package]
name = "mc-classic-js"
version = "0.2.1"
edition = "2021"
description = "Functionality for reading and writing MineCraft Classic JS world saves"
authors = ["Sl1mj1m"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Sl1mj1m14/rust-mc-classic-js"
repository = "https://github.com/Sl1mj1m14/rust-mc-classic-js"
readme = "README.md"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
rusqlite = { version = "0.35", features = ["bundled"] }
snap = "1"
fancy-regex = "0.14.0"
